--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ main {
   color: rgba(255, 255, 255, 0.5);
 }
 .col-8 h2 {
-  font-family: "Montserrat", sans-serif;
+  font-family: "MRaleway", sans-serif;
   font-style: normal;
   font-weight: bold;
   font-size: 30px;
